# mia

./: .astyle  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  GNUmakefile  Makefile.outoftree  NEWS  README  README.md  UseMia.cmake.in  config.h.cmake  coverage.sh  create_package  evaluate_coverage.sh  mia.hh  mia.pc.cmake  mia2d.pc.cmake  mia2dmyocardperf.pc.cmake  mia3d.pc.cmake  miaconfig.h.cmake  miacore.pc.cmake  miacore.pc.in  miamesh.pc.cmake  model_coverty.cpp  run-test-with-valgrind.csh  todo.txt
OpenEXR/: 2dimgexr.cc  2dvfexr.cc  CMakeLists.txt  test-openexr.sh  test_openexr.cc
addons/: CMakeLists.txt
addons/dicom/: CMakeLists.txt  dcm2d.cc  dcm2d.hh  dcm3d.cc  dcm3d.hh  dicom4mia.cc  dicom4mia.hh  getset.hh  test_dcm2d.cc  test_dcm3d.cc  test_dicom4mia.cc
addons/hdf5/: CMakeLists.txt  hdf5_3dimage.cc  hdf5_3dimage.hh  hdf5a_mia.cc  hdf5a_mia.hh  hdf5imagio.cc  hdf5imagio.hh  hdf5mia.cc  hdf5mia.hh  test_hdf5_3dimage.cc  test_hdf5mia.cc
addons/itpp/: CMakeLists.txt  ica.cc  ica.hh  test_ica.cc
addons/jpg/: CMakeLists.txt  jpeg-common.hh  jpg-gray.cc  jpg-rgb.cc  test_jpg.cc
addons/maxflow/: 2dmaxflow.cc  2dmaxflow.hh  CMakeLists.txt  test_2dmaxflow.cc
addons/nifti/: CMakeLists.txt  niftiimage.cc  niftiimage.hh  test_niftiimage.cc
addons/nlopt/: CMakeLists.txt  nlopt.cc  nlopt.hh  test_nlopt.cc
addons/openexr/: 2dimgexr.cc  2dvfexr.cc  CMakeLists.txt  test_openexr.cc
addons/png/: CMakeLists.txt  png-gray.cc  png-rgb.cc  test_png.cc
addons/tiff/: CMakeLists.txt  test_tiff.cc  tiff.cc
addons/vistaio/: 2dtrans.cc  2dtrans.hh  2dvfvistaio.cc  2dvistaio.cc  2dvistaio.hh  3dtrans.cc  3dtrans.hh  3dvfvistaio.cc  3dvistaio.cc  3dvistaio.hh  CMakeLists.txt  alloc.c  attr.c  dictionary.c  edges.c  edgesType.c  error.c  fileio.c  graphType.c  history.c  image.c  imageType.c  list.c  option.c  packData.c  test2dfield.c  test3dfield.c  test_2dtrans.cc  test_2dvistaio.cc  test_3dtrans.cc  test_3dvistaio.cc  test_vista4mia.cc  test_vistaio.cc  type.c  vcplist.c  vcplist.h  version.c  vfield2d.c  vfield2d.h  vfield3d.c  (+7 more)
addons/vtk/: CMakeLists.txt  test_vtkimage.cc  test_vtkmesh.cc  test_vtkvf.cc  vtkimage.cc  vtkimage.hh  vtkmesh.cc  vtkmesh.hh  vtkvf.cc  vtkvf.hh
dicom/: CMakeLists.txt  dcm2d.cc  dcm2d.hh  dcm3d.cc  dcm3d.hh  dicom4mia.cc  dicom4mia.hh  getset.hh  test_dcm2d.cc  test_dcm3d.cc  test_dicom4mia.cc
doc/: CMakeLists.txt  MiaDoctools.cmake  __init__.py  create_chunked_html.sh  definitions.tex  extract_docu.py  idl.tex  libmia2-doc.desktop.cmake  libmia2-doc.menu.cmake  mainpage.doc  make-xml.sh  matlab.tex  mia-xmldoc2man.cmake  mia-xmldoc2nipype.cmake  mia2-doc.desktop.cmake  mia_32x32.xpm  mia_48x48.xpm  mia_64x64.xpm  miahelp.xsd  miamyosegmentset.xsd  miareadxml.py  miawritprogram.py  miaxml2html.py  miaxml2man.py  miaxml2nipype.py  miaxml2sgml.py  plugins.tex  program_intro.xml  programing.tex  programs.tex  progref.css  progref.xml  reference.dox.cmake  reference.dox.in  running.tex  sections.xml  userguide.bib  userguide.tex  version.tex.in
doc/man/: mia-2dimagefilter.man
gsl++/: CMakeLists.txt  Makefile.am  fastica.cc  fastica.hh  gsldefines.hh  iterator.hh  matrix.cc  matrix.hh  matrix_vector_ops.cc  matrix_vector_ops.hh  multimin.cc  multimin.hh  pca.cc  pca.hh  test_matrix.cc  test_matrix_vector_ops.cc  test_multimin.cc  test_pca.cc  test_vector.cc  vector.cc  vector.hh  vector_dispatch.hh  vector_template.cxx  vector_template.hh  wavelet.cc  wavelet.hh
gui/: CMakeLists.txt  curvedisplay.cc  curvedisplay.hh  myocard.cc  serieswindow.cc  serieswindow.hh
idl/: CMakeLists.txt  command.idl  filter.pro  filter2d.cc  filter3d.pro  get_dllname.pro  helpers.cc  helpers.hh  idl2dfilter.cc  idl3dfilter.cc  idl_helpers.hh  idlmia.c  idlmia_helpers.cc  idlmia_proxy.cc  idlmiafilter.c  idlmiafilter.cc  idltest.c  idltest2.c  io.cc  mia.dlm  nrreg2d.pro  reg2d.cc  reg2d.hh  test-idl.sh  test_all.pro  test_echo.pro  test_mia.prj  testme.pro
matlab/: CMakeLists.txt  mextypemap.hh  miadeform2d.m  miadeform3d.m  miamex.cc  miamex.def  miamex_filter2d.cc  miamex_filter3d.cc  miamex_helpers.cc  miamex_proxy.cc  miamex_reg2d.cc  miamex_reg3d.cc  miareg2d.m  miareg2dmultisource.m  miareg3d.m  pathdef.m  testmia.m  testreg2d.m
mia/: 2d.hh  3d.hh  CMakeLists.txt  core.hh  mesh.hh
mia/2d/: 2DDatafield.cc  2DDatafield.cxx  2DDatafield.hh  2DImage.cc  2DImage.hh  2DVector.hh  2DVectorfield.cc  2DVectorfield.hh  2dfilter.cc  2dfilter.hh  2dimageio.cc  2dimageio.hh  2dimageiotest.cc  2dimageiotest.hh  2dvfio.cc  2dvfio.hh  2dvfiotest.cc  BoundingBox.cc  BoundingBox.hh  CMakeLists.txt  SegFrame.cc  SegFrame.hh  (+220 more)
python/: CMakeLists.txt  mia-3dfft-get-reference.py  mia-3dregister-to.py  mia_python.cc  test_mia.py
src/: .gitignore  2davgmasked.cc  2dbinarycombine.cc  2dcombineandinvert.cc  2dcost.cc  2ddeform.cc  2ddistance.cc  2deval-transformquantity.cc  2dfluid-syn-registration.cc  2dforce.cc  2dfuzzysegment.cc  2dgrayimage-combine-to-rgb.cc  2dgroundtruthreg.cc  2dimagecombine-dice.cc  2dimagecombiner.cc  2dimagecreator.cc  2dimagefilter.cc  2dimagefilterstack.cc  2dimagefullstats.cc  2dimageregistration.cc  2dimageselect.cc  2dimageseries-maximum-intensity-projection.cc  2dimagestack-cmeans.cc  2dimagestats.cc  2dlerp.cc  2dmany2one-nonrigid.cc  2dmulti-force.cc  2dmulti-nrreg.cc  2dmultiimageregistration.cc  2dmultiimageto3d.cc  2dmultiimagevar.cc  2dmyocard-ica.cc  2dmyocard-icaseries.cc  2dmyocard-segment.cc  2dmyocard-upsloap.cc  2dmyoica-full.cc  2dmyoica-nonrigid-parallel.cc  2dmyoica-nonrigid.cc  2dmyoica-nonrigid2.cc  2dmyoicapgt.cc  (+111 more)
vistaio/: 2dtrans.cc  2dvfvistaio.cc  2dvistaio.cc  3dtrans.cc  3dvfvistaio.cc  3dvistaio.cc  CMakeLists.txt  alloc.c  attr.c  dictionary.c  edges.c  edgesType.c  error.c  fileio.c  graphType.c  history.c  image.c  imageType.c  list.c  option.c  packData.c  test-vista4mia.bat  test2dfield.c  test3dfield.c  test_vista4mia.cc  type.c  vconfig.h  vcplist.c  vcplist.h  version.c  vfield2d.c  vfield2d.h  vfield3d.c  vfield3d.h  vista.h  vista4mia.cc  vista4mia.hh  vistaio.h  vistamesh.cc  volumes.c  (+1 more)
(+1397 files in other folders)
